<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="til_company">Empresa</string>
    <string name="til_color">Cor</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com Sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>